<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mobacc</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_add_new">Add_new</string>
    <string name="select">Choose a categorie</string>
    <string name="select2">Choose an item</string>
    <string name="button_label">Submit</string>

    <string-array name="categories">
        <item>Cat1</item>
        <item>Cat2</item>
        <item>Cat3</item>
        <item>Cat4</item>
        <item>Cat5</item>
        <item>Cat6</item>
        <item>Cat7</item>
        <item>Cat8</item>
    </string-array>

    <string name="Merchant">Merchant</string>
    <string name="Amount">Amount</string>
    <string name="Description">Description</string>
    <string name="title_activity_login">Login</string>
    <string name="logout">LOGOUT</string>
    <string name="title_activity_register">Register</string>

</resources>
=======
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mobacc</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_add_new">Add_new</string>
    <string name="select">Choose a categorie</string>
    <string name="select2">Choose an item</string>
    <string name="button_label">Submit</string>

    <string-array name="categories">
        <item>Cat1</item>
        <item>Cat2</item>
        <item>Cat3</item>
        <item>Cat4</item>
        <item>Cat5</item>
        <item>Cat6</item>
        <item>Cat7</item>
        <item>Cat8</item>
    </string-array>

    <string name="Merchant">Merchant</string>
    <string name="Amount">Amount</string>
    <string name="Description">Description</string>
    <string name="title_activity_login">Login</string>

</resources>
>>>>>>> 8bb5c9ea6f3b5c14aa85f57b34b22f27ca1044bf
